# data-complexity

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITING.cff  CITING.md  README.md  pyproject.toml  setup.py  tox.ini
.github/: workflow.yaml
.github/workflows/: main.yml
data/: blobs_300_balanced.csv  blobs_300_unbalanced.csv  fuzzy_300_balanced.csv  fuzzy_300_unbalanced.csv  linear_300_balanced.csv  linear_300_unbalanced.csv  random_300_balanced.csv  random_300_unbalanced.csv  register.md
dcm/: __init__.py  __version__.py  balance.py  feature_based.py  imbalance.py  linearity.py  main.py  neighborhood.py  smoothness.py  utils.py
docs/: help.md
examples/: Balance examples.ipynb  Breast cancer example.ipynb  Complexity profile.ipynb  Data generator.ipynb  F1 examples.ipynb  Feature based examples.ipynb  Imbalance examples.ipynb  Iris example.ipynb  Linearity examples.ipynb  Neighborhood examples.ipynb  Sklearn datasets.ipynb  breastcancer.py  creditcard.py  noisy_circles.py
templates/: .release_notes.md.j2
tests/: test_balance.py  test_correlation.py  test_features.py  test_imbalance.py  test_linearity.py  test_neighborhood.py  test_smoothness.py
